idを分かりやすい表記に変更（hspprogは未完了）

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -97,7 +97,6 @@
 	・ページの全要素はidが"CONTAINER"であるdivタグで囲む。
 	　「ページの1番上に戻る」リンクではこのidを使う。
 	・見出しはh1～h4タグを使う。
-	　idはCxxSxxの形式で指定する（それぞれChapter,Sectionの意：2章15節ならばC2S15）。
 		h1：title同様、文書の内容を表す。idはつけない。
 		h2：章。1章だけで構成される文書の場合は節として良い。
 		h3：節。
@@ -116,7 +115,7 @@
 	・出力例はsampタグ（インライン要素）。
 	・1行のスクリプト例はcodeタグ（インライン要素）。
 	・複数行にわたるサンプルスクリプトはpreタグ（ブロック要素）。
-	・3周のリスト書き（ol,ul,dl）を有効に利用すること。
+	・3種のリスト書き（ol,ul,dl）を有効に利用すること。
 
 	[body要素内/テーブル]
 	・table内にcaption要素を書くように心がける。
