--- a/trunk/package/win32/doclib/easy3d/index.htm
+++ b/trunk/package/win32/doclib/easy3d/index.htm
@@ -65,6 +65,7 @@ RokDeBone2がバージョンアップした際には、ファイルのフォーマットが新しくなることが
 <A href="rdb2_ver5001.htm"><FONT size="+2">Tips　：　ver5.0.0.1での変更点について</FONT></A><BR>
 <BR>
 <FONT size="+2"><A href="e3d_version.htm">Tips　：　Sig, Qua, Moaファイルの読み込みがエラーになるとき</A></FONT></P>
+<P><FONT size="+2"><A href="FromHSP31.htm">Tips　：　HSP３．１同梱版からのバージョンアップについて</A></FONT></P>
 <P><BR>
 <BR>
 </P>
