ドキュメント、ヘルプの更新

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -39,15 +39,14 @@
 					<li><a href="#SCRIPT_SAMPLE">HSPスクリプトサンプル</a></li>
 					<li><a href="#HIDDEN_WINDOW">メインウィンドウ非表示EXEファイル</a></li>
 					<li><a href="#NO_DIR_MOVE">ディレクトリ移動の無効化</a></li>
-					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン</a></li>
+					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール</a></li>
 					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
 					<li><a href="#DEBUG_WINDOW">デバッグウィンドウ</a></li>
 					<li><a href="#EX_MACRO">HSP拡張マクロ</a></li>
-					<li><a href="#SUPPORT_MODULE">HSP3支援モジュール</a></li>
 					<li><a href="#COLORING_AND_TAB">スクリプトの色分けとタブ</a></li>
-					<li><a href="#HSPLET">HSPLetの利用について<span class="new">（New!）</span></a></li>
+					<li><a href="#HSPLET">HSPLetの利用について</a></li>
 					<li><a href="#EASY_INPUT">かんたん入力<span class="new">（New!）</span></a></li>
-					<li><a href="#PEAS_EDITOR">Peasエディタ<span class="new">（New!）</span></a></li>
+					<li><a href="#PEAS_EDITOR">Peasエディタ</a></li>
 				</ol>
 			</li>
 			<li><a href="#DESCRIPTION">スクリプト記述の基本</a>
@@ -57,8 +56,8 @@
 					<li><a href="#PARAMETER">パラメータ</a></li>
 					<li><a href="#MULTI_STATEMENT">マルチステートメント</a></li>
 					<li><a href="#COMMENT">コメント</a></li>
-					<li><a href="#EXPRESSION">式<span class="new">（New!）</span></a></li>
-					<li><a href="#STRING">文字列</a></li>
+					<li><a href="#EXPRESSION">式</a></li>
+					<li><a href="#STRING">文字列<span class="new">（New!）</span></a></li>
 					<li><a href="#VAR">変数</a></li>
 					<li><a href="#ARRAY">配列変数</a></li>
 					<li><a href="#FUNC">関数</a></li>
@@ -81,7 +80,7 @@
 					<li><a href="#HSPDEF">標準マクロ定義ファイル</a></li>
 					<li><a href="#CALL_API">API呼び出し</a></li>
 					<li><a href="#COM_COMPONENT">COMコンポーネント呼び出し</a></li>
-					<li><a href="#AHT">HSPテンプレート(AHT)機能<span class="new">（New!）</span></a></li>
+					<li><a href="#AHT">HSPテンプレート(AHT)機能</a></li>
 				</ol>
 			</li>
 			<li><a href="#HSP_BASIS">HSPの基本動作概念</a>
@@ -92,6 +91,7 @@
 					<li><a href="#CUR_POSITION">カレントポジション</a></li>
 					<li><a href="#GUI_OBJECT">配置オブジェクト</a></li>
 					<li><a href="#CUR_COLOR">カレントカラー</a></li>
+					<li><a href="#CEL_FUNCTION">CEL関連命令について<span class="new">（New!）</span></a></li>
 					<li><a href="#MEM_BUFFER">メモリバッファの使用</a></li>
 					<li><a href="#PLAY_MULTIMEDIA">マルチメディア再生</a></li>
 					<li><a href="#CONSOLE">コンソール版HSP</a></li>
@@ -138,9 +138,9 @@
 			文字列の演算は結合(「+」)のみ可能です。</li>
 			<li>変数の配列は、「変数(要素)」の形でカッコを使って指定します。配列を使用するためには、
 			あらかじめdim、sdim命令で宣言を行ないます。</li>
-			<li>プログラムの流れを制御するためのgoto、gosub命令が用意されています。
+			<li>プログラムの流れを制御するための基礎的な仕組みとしてgoto、gosub命令が用意されています。
 			そこで指定するラベルは、行の先頭に「*ラベル名」の形で定義します。
-			繰り返しの記述は通常、repeat～loop命令で行ないます。これは、C言語のfor、while、doを
+			<li>繰り返しの記述は通常、repeat～loop命令で行ないます。これは、C言語のfor、while、doを
 			簡略化したものと捉えることができます。
 			この他にも、while～wend、do～until、for～next、switch～caseなどC言語ライクなマクロ命令が用意されています。
 			詳しくは、「<a href="#HSPDEF">標準マクロ定義ファイル</a>」を参照してください。</li>
@@ -312,6 +312,14 @@
 		</p>
 
 		<dl>
+			<dt>HSPヘルプマネージャ形式 (標準)</dt>
+			<dd><p>
+				ヘルプマネージャを呼び出してヘルプの表示を行ないます。
+				指定されたディレクトリにHELPMAN.EXEというファイルと、ヘルプデータ(hsファイル)が必要です。
+				HSP3.2以降では、ヘルプマネージャは、HSP Document Library(統合ドキュメントビューアー)に
+				キーワードを指定してヘルプを表示します。
+			</p></dd>
+
 			<dt> HTML形式 (オプション)</dt>
 			<dd><p>
 				ver2.5までの標準であるHTML形式ヘルプ表示を行ないます。
@@ -324,14 +332,6 @@
 				HSP標準ではサポートされていませんが、ユーザーなどによって作られた
 				ヘルプデータの表示が可能です。キーワードによる検索に対応しています。
 				指定されたディレクトリにHSP.HLPというファイルが必要になります。
-			</p></dd>
-
-			<dt>HSPヘルプマネージャ形式 (標準)</dt>
-			<dd><p>
-				ヘルプマネージャを呼び出してヘルプの表示を行ないます。
-				指定されたディレクトリにHELPMAN.EXEというファイルと、インデックス
-				データ(idxファイル)およびヘルプデータ(hsファイル)が必要です。
-				ヘルプマネージャの詳しい説明は、「helpman.txt」のドキュメントをお読みください。
 			</p></dd>
 
 			<dt>Windows HTML HELP形式 (オプション)</dt>
@@ -357,13 +357,8 @@
 		</p>
 
 		<p>
-			ヘルプの標準ビューアーとしてS.Programsさん作成の「HSP HELP Browser II」が同梱されています。
-			全文検索、グループ別、プラグイン別検索など多機能なヘルプ閲覧が可能になっています。
-			また、ヘルプファイル(.hsファイル)を追加した場合にも自動的にヘルプキーワードが更新されるようになっています。
-		</p>
-		<p>
-			「HSP HELP Browser II」およびヘルプファイル・サポートツールについての詳細は、
-			「<a href="hhx.txt">hhx.txt</a>」「<a href="HS_BIBLE.txt">HS_BIBLE.txt</a>」を参照してください。
+			「HSP Document Library」およびヘルプファイルについての詳細は、
+			「<a href="HSP Document Library/HDL_Readme.txt">HDL_Readme.txt</a>」「<a href="HSP Document Library/HS_BIBLE.txt">HS_BIBLE.txt</a>」を参照してください。
 		</p>
 
 		<h3 id="START_DIR">起動ディレクトリ</h3>
@@ -505,10 +500,6 @@
 #packopt name "test"
 #packopt runtime "hsp3c.hrt"</pre>
 		<p>
-			今まで通りに、「packfile編集」からパックされるファイルを選択して
-			実行ファイルを作成することも可能です。
-			「実行ファイル自動作成」を行なうと、packfileが自動的に作成されるため、
-			それまで保存されていたpackfileの情報は上書きされるので注意して下さい。
 			尚、「start.ax」はデフォルトで暗号化されたものがpackfileに追加されます。
 			また、「#packopt runtime "ランタイムファイル名"」で指定された
 			ランタイムファイル(拡張子がhrtのもの)は、hspcmp.dllと同じディレクトリか、
@@ -524,9 +515,11 @@
 		</p>
 
 		<p>
-			なお、ver2.55まで行なっていた手動による実行ファイル作成も可能です。こちらの方法は、以下の通りです。
+			HSP3.0以前で利用していた、「packfile編集」からパックされるファイルを選択して
+			実行ファイルを作成することも可能です。
+			(ただし、この方法はHSP3.0以降では推奨していません。)
 		</p>
-		<h4>マニュアルでEXEファイルを作成するための手順。(Ver2.55互換の方法)</h4>
+		<h4>マニュアルでEXEファイルを作成するための手順。(Ver2.x互換の方法)</h4>
 		<ul>
 			<li>
 				スクリプトのオブジェクトファイルを作成しておくこと。
@@ -731,7 +724,7 @@
 		<h3 id="SCRIPT_SAMPLE">HSPスクリプトサンプル</h3>
 		<p>
 			HSP3デモのタイトルから「サンプルスクリプトを見る」を選択するか、
-			HSPがインストールされたディレクトリ(C:\Program Files\hsp31\など)にある、
+			HSPがインストールされたディレクトリ(C:\hsp32\など)にある、
 			「sampview.exe」を実行することで、HSPスクリプトサンプルを閲覧、実行
 			することのできる、サンプルビューアーが起動します。
 		</p>
@@ -746,7 +739,7 @@
 			EXEファイル作成時に、メインウィンドウを非表示にして起動させることが可能です。
 			#packopt命令により設定されるオプションで、<code>#packopt hide 1</code>と指定して
 			実行ファイルを作成([ctrl]+[F9])すると、その実行ファイルは起動時にメインウィンドウ(ウィンドウID0)が
-			最初に表示されなくなります。
+			表示されなくなります。
 		</p>
 		<p>
 			これは、起動時にウィンドウサイズを変更したり、表示位置を変更しても一瞬だけウィンドウがデフォルトの
@@ -783,7 +776,10 @@
 
 		<h3 id="HSPEX_PLUGIN">HSP拡張プラグイン・モジュール</h3>
 		<p>
-			この項目は<a href="plugin.htm">plugin.htm</a>へ移動しました。
+			HSPでは、拡張プラグイン及びモジュールという形で機能を追加していくことが可能です。
+			これにより、HSP本体だけでは実現できない処理が可能になります。
+			HSPフルセットには、多くのプラグインやモジュールが同梱されています。
+			詳しくは、<a href="plugin.htm">拡張プラグイン・モジュール一覧</a>を参照してください。
 		</p>
 
 		<h3 id="EX_RUNTIME">拡張ランタイム</h3>
@@ -911,88 +907,8 @@
 		<p>
 			HSP拡張マクロは、標準的にサポートされているマクロの定義セットで、
 			commonフォルダ内の「hspdef.as」ファイルが設定を行なっています。
-			スクリプトエディタのHSPメニューで、「HSP拡張マクロを使用する」がチェックされている時に有効となります。
-			HSP拡張マクロは、特別な理由がない限りはチェックを入れた状態にしておいて下さい。
+			スクリプトのコンパイル時には、自動的に「hspdef.as」が読み込まれることになります。
 		</p>
-
-		<h3 id="SUPPORT_MODULE">HSP3支援モジュール</h3>
-		<p>
-			commonフォルダ内には、多くの「HSP3支援モジュール」が置かれています。
-			これは、ソースの先頭で#include命令により読み込むことで、便利な機能を追加したり、
-			マクロ定義を行なうためのモジュールになっています。
-			HSP3支援モジュールとして、標準で以下のファイルを利用可能です。
-		</p>
-		<dl>
-			<dt>hsp3util.as</dt>
-			<dd>
-				<p>
-					HSP3で使用するための便利な命令が定義されています。
-					文字列を１文字づつ表示したり、修飾を行なうtext命令、emes命令や、
-					日付や時刻を文字列で取得するgettimestr、getdatestr命令、
-					BMPファイルのパレットを取り出すbmppalette命令が追加されます。
-					また、配列と複数行文字列を相互変換するための命令も装備されています。
-					詳細については、「hsp3util.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>hsp261cmp.as</dt>
-			<dd>
-				<p>
-					HSP2.61互換の命令セットを定義します。
-					あくまでも、HSP2.61に近い記述が可能になるだけで、一部の命令や動作は
-					完全な互換にはならないので、ご注意下さい。
-				</p>
-			</dd>
-			<dt>form_decode.as</dt>
-			<dd>
-				<p>
-					cgiで送信されたURLエンコードを元の文字列に戻すためのform_decode命令が追加されます。
-					HSPCLを使用してcgiを作成する時に便利なモジュールです。
-					詳細については、「form_decode.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>mod_getenv.as</dt>
-			<dd>
-				<p>
-					環境変数の値を変数に取得するためのgetenv命令が追加されます。
-					cgiなどで実行時の環境変数を参照したい時に利用することができます。
-					詳細については、「mod_getenv.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>mod_img.as</dt>
-			<dd>
-				<p>
-					画像を読み込むためのimgload命令が追加されます。
-					BMP,JPEG,GIF,ICO,PNGフォーマットを読み込むことが可能です。
-					詳細については、「mod_img.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>hspmath.as</dt>
-			<dd>
-				<p>
-					高度な数学計算を行なうための定数やマクロが定義されています。
-					円周率πなどの定数や、ラジアン・度の相互変換などの関数が追加されます。
-					詳細については、「hspmath.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>obj.as</dt>
-			<dd>
-				<p>
-					HSP2.61同梱のllmod.asでサポートしていた、
-					配置オブジェクトに関する命令
-					(objgray、p_scrwnd、getobjsize、resizeobj)を追加します。
-					詳細については、「obj.as」ファイル内を参照してください。
-				</p>
-			</dd>
-			<dt>advapi32.as / comctl32.as / comdlg32.as / gdi32.as / kernel32.as / shell32.as / user32.as / winmm.as
-</dt>
-			<dd>
-				<p>
-					同名のWindows DLLがエクスポートしているAPIを定義したファイルです。
-					引数はすべてsptrになっているので、API仕様に従って適切な値をユーザー側で渡す必要があります。
-					WIN32APIについての知識や資料が別途必要になります。
-				</p>
-			</dd>
-		</dl>
 
 		<h3 id="COLORING_AND_TAB">スクリプトの色分けとタブ</h3>
 		<p>
@@ -1366,6 +1282,35 @@ p2=0～65535(0)</pre>
 			複数行に渡っている時は、1行の最後に改行コードが挿入されます。
 		</p>
 
+		<p>
+			HSPでは、文字列を扱うための命令や関数を多く用意しています。
+		</p>
+		<table class="keywordlist" summary="文字列を扱う命令・関数を一覧形式で紹介しています。">
+		<caption>文字列を扱う命令・関数 一覧</caption>
+			<tr><th>キーワード</th><th>機能</th></tr>
+			<tr><td>getstr</td><td>バッファから文字列読み出し</td></tr>
+			<tr><td>strmid</td><td>文字列の一部を取り出す</td></tr>
+			<tr><td>instr</td><td>文字列の検索をする</td></tr>
+			<tr><td>getpath</td><td>パスの一部を取得</td></tr>
+			<tr><td>strf</td><td>書式付き文字列に変換</td></tr>
+			<tr><td>cnvwtos</td><td>unicodeを通常文字列に変換</td></tr>
+			<tr><td>cnvstow</td><td>通常文字列をunicodeに変換</td></tr>
+			<tr><td>strtrim</td><td>指定した文字だけを取り除く</td></tr>
+			<tr><td>split</td><td>文字列から分割された要素を代入</td></tr>
+			<tr><td>noteadd</td><td>指定行の追加・変更</td></tr>
+			<tr><td>notedel</td><td>行の削除</td></tr>
+			<tr><td>noteget</td><td>指定行を読み込み</td></tr>
+			<tr><td>noteinfo</td><td>メモリノートパッド情報取得</td></tr>
+			<tr><td>notesel</td><td>メモリノートパッド設定</td></tr>
+			<tr><td>noteunsel</td><td>対象バッファの復帰</td></tr>
+			<tr><td>notesave</td><td>対象バッファ保存</td></tr>
+			<tr><td>noteload</td><td>対象バッファ読み込み</td></tr>
+		</table>
+		<p>
+			この他にも、拡張プラグイン・モジュール等でも多くのサポートが行なわれます。
+		</p>
+
+
 		<h3 id="VAR">変数</h3>
 		<p>
 			任意の名前をつけた変数を扱うことができます。変数とは、代入により内容
@@ -1645,11 +1590,13 @@ p2=0～65535(0)</pre>
 		</p>
 		<pre>; ラベル型変数のテスト
 ;
-    a=*test
-    a(1)=*test2
+    ldim a,2
     mes "TYPE="+vartype(a)
-    mes "USE="+varuse(a)
-    gosub a
+    mes "USE(0)="+varuse(a(0))
+    a(0)=*test
+    a(1)=*test2
+    mes "USE(0)="+varuse(a(0))
+    gosub a(0)
     gosub a(1)
     mes "OK"
     stop
@@ -1658,11 +1605,12 @@ p2=0～65535(0)</pre>
     return
 *test2
     mes "JUMP OK2"
-    return</pre>
+    return
+</pre>
 		<p>
 			ラベル型変数は、vartype関数によりタイプ値「1」が取得されます。
 			また、varuse関数により有効なラベルが代入されているかどうかを判別することが可能です。
-			ラベル型変数の配列は、<code>dimtype a,vartype("label"),20</code>と指定して確保することができます。
+			ラベル型変数の配列は、<code>ldim a,20</code>と指定して確保することができます。
 		</p>
 		<p>
 			ラベル型変数は、スクリプトの飛び先が見えにくくなり、全体の把握が難しくなります。
@@ -2204,6 +2152,7 @@ p2=0～65535(0)</pre>
 			<tr><td>ginfo_cx</td><td>カレントポジションのX座標</td></tr>
 			<tr><td>ginfo_cy</td><td>カレントポジションのY座標</td></tr>
 			<tr><td>ginfo_intid</td><td>メッセージ割り込み時のウィンドウID</td></tr>
+			<tr><td>ginfo_newid</td><td>未使用ウィンドウID</td></tr>
 			<tr><td>dir_cur</td><td>カレントディレクトリ(フォルダ)</td></tr>
 			<tr><td>dir_exe</td><td>実行ファイルがあるディレクトリ(フォルダ)</td></tr>
 			<tr><td>dir_win</td><td>Windowsディレクトリ(フォルダ)</td></tr>
@@ -3928,18 +3877,143 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		</p>
 
 
+		<h3 id="CEL_FUNCTION">CEL関連命令について</h3>
+		<p>
+		HSP3.2では、2Dキャラクター表示のためのセル描画命令を追加しています。
+		これは、従来のgcopy命令に代わる分かりやすい記述と構造を持っています。
+		また、将来のバージョンでのαチャンネルサポートやDirectX対応を見据えた、
+		高速描画のための拡張という側面を持っています。
+		<BR><BR>
+		セル描画命令により、キャラクターの描画コストを減らし、その素材を明確に
+		分けることができます。もちろん、従来と同様のgcopy命令による表示も同じ
+		ように利用することができます。
+		<BR><BR>
+		セル関連命令は、celload命令、celdiv命令、celput命令で構成されています。
+		celload命令は、表示用の画像(テクスチャ)をファイルから読み込むための命令です。
+		picload命令と同様に、指定された画像ファイルをメモリ上に展開しますが、
+		読み込み先のバッファを指定可能になっています。
+		<PRE>
+		　例 :
+			celload "a.bmp",1
+		</PRE>
+		上の例では、「a.bmp」という画像をウィンドウID1に読み込みます。
+		これは、buffer命令でウィンドウID1を初期化して、picload命令で画像を
+		読み込むという処理を1度に行ないます。
+		また、celload命令では空いているウィンドウIDに対して読み込みを行なうことが
+		可能になっています。
+		<PRE>
+		　例 :
+			celload "a.bmp"
+			id = stat
+		</PRE>
+		上の例では、変数idに読み込まれたウィンドウIDが代入されます。
+		このようにウィンドウIDのパラメーターが省略された場合には、未使用のIDが
+		使用され、その番号がシステム変数statに代入されます。
+		<BR><BR>
+		読み込まれた画像は、その全体または一部をcelput命令により描画することが
+		できます。celput命令は、2Dスプライトに近い描画方法を提供します。
+		<PRE>
+		　例 :
+			celload "a.bmp",1
+			pos 100,100
+			gmode 2
+			celput 1
+		</PRE>
+		上の例では、ウィンドウID1にある画像(「a.bmp」の画像)を(100,100)の位置に、
+		コピーモード2で描画します。
+		描画位置は、pos命令で設定されたカレントポジションとなります。
+		注意しなければならないのは、ここで指定される座標は中心となる描画位置で
+		あるという点です。gcopy命令のように、左上を基点に描画するのではなく、
+		指定された基点を中心として、画像が描画されることになります。
+		描画される画像のサイズは、画像全体(ウィンドウID1のサイズ)になります。
+		これを変更する場合には、celdiv命令(後述)を使用します。
+		<BR><BR>
+		celput命令には、他にもいくつかのパラメーターが用意されています。
+		<PRE>
+			celput id,no,zoomx,zoomy,angle
+
+			id=0～(1) : 画像素材を持つウインドゥID
+			no=0～(0) : 分割画像No.
+			zoomx=0.0～(1.0) : 横方向の表示倍率(実数)
+			zoomy=0.0～(1.0) : 縦方向の表示倍率(実数)
+			angle=0.0～(0.0) : 回転角度(単位はラジアン)
+		</PRE>
+		zoomx,zoomy,angleにより、元画像の素材に対して変倍、回転などの加工を設定
+		することができます。
+		zoomx,zoomy,angleの指定を省略するか、等倍の設定(1,1,0)になっている場合は、
+		自動的に高速なコピーが内部で実行されます。逆に、等倍でない描画を行なう場合は、
+		grotate命令と同様の描画処理が実行されます。
+		<BR><BR>
+		描画時は、gmode命令により、コピーモード及び透過率を指定することができます。
+		gcopy命令やgrotate命令と同様のオプションを指定可能です。
+		<BR><BR>
+		描画終了後は、描画したサイズに応じてカレントポジションを右に移動します。
+		<PRE>
+		　例 :
+			repeat 5
+			celput 1
+			loop
+		</PRE>
+		上の例では、同じ画像が横に５個並べて描画されます。
+		<BR><BR>
+		元画像の素材をいくつかのパーツに分割することができます。
+		celdiv命令は、ウィンドウIDごとにパーツの分割数を設定しておくための命令です。
+		<PRE>
+		　例 :
+			celload "a.bmp",1
+			celdiv 1,4,4
+		</PRE>
+		上の例では、ウィンドウID1の画像を4×4の画像に分割します。
+		celput命令では、分割の情報を考慮して描画を行ないます。
+		たとえば、256×256ドットの画像を4×4に分割した場合には、
+		64×64ドットの画像１６個分として扱われます。
+		分割された画像は、celput命令の2番目のパラメーターで指定されます。
+		ここで指定される、「分割画像No.」は分割された領域を0,1,2…という数値で
+		表現しています。
+		4×4に分割した場合は、以下のような順番で番号が付けられます。
+		</p>
+		<table class="keywordlist">
+			<tr><th>0</th><th>1</th><th>2</th><th>3</th></tr>
+			<tr><th>4</th><th>5</th><th>6</th><th>7</th></tr>
+			<tr><th>8</th><th>9</th><th>10</th><th>11</th></tr>
+			<tr><th>12</th><th>13</th><th>14</th><th>15</th></tr>
+		</table>
+		<p>		
+		描画される画像のサイズは、元画像と分割数によって決定されます。
+		gmode命令で指定したコピーサイズは、celputの際には反映されないので
+		注意してください。
+		</p>
+
+
 		<h3 id="MEM_BUFFER">メモリバッファの使用</h3>
 		<p>
-			通常の変数や、配列変数が使用しているメモリをファイルにセーブしたり、
-			ファイルからロードをするための命令が用意されています。
+			変数が保持するメモリ空間を、データを取り扱うメモリバッファとして
+			操作することができるようになっています。
+			これは、データの長さが不定の文字列やバイナリデータなど
+			様々な形式を処理する際に利用できます。
 		</p>
 		<p>
-			メモリバッファは、Windowsが許す限りのメモリを扱うことができ、上限はありません。
+			変数が管理するメモリバッファのサイズは可変長で、、Windowsが許す限りの
+			メモリを扱うことができ、上限はありません。
+			メモリバッファは、通常sdim命令またはalloc命令で確保することができます。
+			(途中でサイズを拡張する場合は、memexpand命令を使用します。)
 			メモリバッファのファイル入出力は、通常bload命令、bsave命令で行ないます。
 		</p>
 		<p>
-			また、テキストファイルを扱うためにベットnoteload命令、notesave命令
+			また、テキストファイルを扱うためにnoteload命令、notesave命令
 			が用意されています。詳しくは、「メモリノートパッド命令」の項を参照してください。
+			扱う対象がテキストファイルであっても、バイナリのデータであっても基本的に
+			メモリバッファの扱いは変わりません。
+		</p>
+		<p>
+			メモリバッファのデータに対しては、poke命令、wpoke命令、lpoke命令等で直接
+			アクセスができるほか、peek関数、wpeek関数、lpeek関数により内容を読み出すことが
+			可能になっています。
+			尚、データをまとめてコピー、フィルするために、memcpy命令、memset命令が用意されています。
+		</p>
+		<p>
+			外部DLLやプログラムで扱う場合には、変数が扱うメモリバッファのポインタを
+			varptr関数により取得することが可能です。
 		</p>
 
 
@@ -4008,7 +4082,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 
 p1=変数名  : 情報を格納する変数名
 p2=1～     : 変数に代入される最大文字数
-p3=0～(0)  : 改行コード認識フラグ(0=なし/1=認識)
+p3=0～(0)  : 改行コード認識フラグ(0=なし/1,2=認識)
 
 ・説明
 
@@ -4019,8 +4093,9 @@ p3=0～(0)  : 改行コード認識フラグ(0=なし/1=認識)
     p3を省略するか、0を指定した場合は標準入力すべて(EOFまで)を
     そのまま取得します。p3に1が指定された場合は、改行コード(13)を
     終端として認識します。標準入力として、キーボード入力(コンソール)
-    を使用する場合には、p3を1にすることにより[Enter]キーで入力を
+    を使用する場合には、p3を1または2にすることにより[Enter]キーで入力を
     確定させることが可能になります。
+    (p3が1の場合はLFを、2の場合はCR+LFを改行として認識します)
     通常は、文字列終端(文字コード0)までを取得しますが、p3の値に
     16を加算することで、文字コード0を含む標準入力バッファ内容すべてを
     変数バッファに取り込みます。バイナリデータなど0を含むコードを
