--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.1 アップデートガイド</title>
+	<title>HSP3.2 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
@@ -392,13 +392,9 @@
 			<li>ll_bin</li>
 		</ul>
 		<p>
-			llmodに含まれる命令、マクロ等は継承されません。
-			同等の動作を行なうモジュールが「S Software」のページにて公開されています。
+			ただし、HSP3.2以降ではllmodに含まれる命令、マクロ等を継承したllmod3が同梱されています。
+			詳しくは、common/llmod3ディレクトリにあるソースを参照してください。
 		</p>
-		<dl>
-			<dt>S Software</dt>
-			<dd><p><a href="http://www.s-software.net/">http://www.s-software.net/</a></p></dd>
-		</dl>
 
 		<h3 id="FROM2_MODULE">モジュール機能の仕様変更</h3>
 		<p>
