--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -22,10 +22,11 @@
 		<ul>
 			<li><a href="doclib/hsp3.htm">HSPシステムドキュメント・インストールガイド（hsp3.htm）</a></li>
 			<li><a href="doclib/update.htm">以前のバージョンからの変更点（アップデートガイド）（update.htm）</a></li>
-			<li><a href="doclib/hspprog.htm">プログラミングマニュアル1・基本仕様ガイド（hspprog.htm）</a></li>
+			<li><a href="doclib/hspprog.htm">プログラミングマニュアル・基本仕様ガイド（hspprog.htm）</a></li>
 			<li><a href="doclib/beginner/start.htm">初心者のためのHSP入門（beginner/start.htm）</a></li>
 			<li><a href="doclib/faq.htm">よくある質問（faq.htm）</a></li>
 			<li><a href="doclib/error.htm">エラーメッセージ一覧（error.htm）</a></li>
+			<li><a href="doclib/plugin.htm">拡張プラグイン・モジュール一覧（plugin.htm）</a></li>
 			<li><a href="doclib/peas.htm">peasエディタ マニュアル（peas.htm）</a></li>
 			<li><a href="doclib/HSP Document Library/hdl_usage.htm">HDL(HSP Document Library) の使い方（hdl_usage.htm）</a></li>
 			<li><a href="doclib/hsptv.htm">HSPTVブラウザ マニュアル（hsptv.htm）</a></li>
