--- a/package/win32/doclib/plugin.htm
+++ b/package/win32/doclib/plugin.htm
@@ -9,9 +9,11 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,プログラミングマニュアル">
 	<meta name="description" content="HSPTVに関する情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3 拡張プラグイン・モジュール一覧</title>
+	<title>拡張プラグイン・モジュール一覧</title>
 </head>
 <!--
+	2009/05/19
+		・ 同梱モジュールの説明を追加
 	2008/02/01
 		・ hgimg3の説明を修正。（DLL→hrtなど）
 -->
@@ -21,7 +23,7 @@
 		<!-- ヘッダー -->
 		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.2 / onion software 1997-2009(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3 拡張プラグイン・モジュール一覧</h1>
+		<h1>拡張プラグイン・モジュール一覧</h1>
 
 		<!-- 目次 -->
 		<ol>
@@ -46,6 +48,22 @@
 			<li><a href="#MODULE">モジュール</a>
 				<ol>
 					<li><a href="#D3MODULE">d3module</a></li>
+
+					<li><a href="#llmod3">llmod3</a></li>
+					<li><a href="#hsp3util">hsp3util.as</a></li>
+					<li><a href="#hsp261cmp">hsp261cmp.as</a></li>
+					<li><a href="#form_decode">form_decode.as</a></li>
+					<li><a href="#mod_getenv">mod_getenv.as</a></li>
+					<li><a href="#mod_img">mod_img.as</a></li>
+					<li><a href="#hspmath">hspmath.as</a></li>
+					<li><a href="#mod_fontdlg">mod_fontdlg.as</a></li>
+					<li><a href="#mod_aht">mod_aht.as</a></li>
+					<li><a href="#mod_joystick">mod_joystick.as</a></li>
+					<li><a href="#mod_menu">mod_menu.as</a></li>
+					<li><a href="#mod_picfont">mod_picfont.as</a></li>
+					<li><a href="#mod_rss">mod_rss.as</a></li>
+					<li><a href="#mod_stbar">mod_stbar.as</a></li>
+					<li><a href="#winapi">Win32API定義</a></li>
 				</ol>
 			</li>
 			<li><a href="#OTHER_PLUGIN">その他の拡張プラグイン</a></li>
@@ -518,6 +536,372 @@
 					</p>
 					<p>
 						詳しくは、別途ドキュメント「<a href="d3module.txt">d3module.txt</a>」を参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="llmod3">llmod3</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>llmod3の紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">llmod3</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:tom/芝やん/OpenHSP</th>
+				<th width="20%"><a href="http://www.s-software.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					HSP3.0以前に使用されていたllmod(tomさん作)の命令群をHSP3で使用可能にするモジュールです。
+					拡張オブジェクトからシステムの設定など多くの機能をサポートしています。
+					llmod3は、common/llmod3フォルダにある以下のファイルから構成されています。
+					<ul>
+					<li>about.as	aboutモジュール
+					<li>msgdlg.as	dialog(type 0)拡張モジュール
+					<li>unicode.as	Unicode関連のモジュール
+					<li>winver.as	Version取得モジュール
+					<li>multiopen.as	dialog(type 16,17)拡張モジュール(複数のファイル名を取得できるようにしたもの)
+					<li>scrsvr.as	スクリーンセーバー関連モジュール
+					<li>obj.as		オブジェクト関連モジュール
+					<li>img.as		イメージ関連のモジュール
+					<li>treebox.as	ツリーボックス作成モジュール
+					<li>progbox.as	プログレスボックス作成モジュール
+					<li>trackbox.as	トラックボックス作成モジュール
+					<li>udbtn.as	アップダウンボックス作成モジュール
+					<li>listview.as	リストビュー作成モジュール
+					<li>console.as	コンソールウィンドウ作成モジュール
+					<li>dragdrop.as	ドラッグ&ドロップモジュール
+					<li>ime.as		IME関連のモジュール
+					<li>input.as	インプット関連のモジュール
+					<li>misc.as		その他
+					</ul>
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="hsp3util">hsp3util.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>hsp3util.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">hsp3util.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					HSP3で使用するための便利な命令が定義されています。
+					文字列を１文字づつ表示したり、修飾を行なうtext命令、emes命令や、
+					日付や時刻を文字列で取得するgettimestr、getdatestr命令、
+					BMPファイルのパレットを取り出すbmppalette命令が追加されます。
+					また、配列と複数行文字列を相互変換するための命令も装備されています。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="hsp261cmp">hsp261cmp.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>hsp261cmp.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">hsp261cmp.as</th>
+				<th width="5%">Ver3.0</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					HSP2.61互換の命令セットを定義します。
+					あくまでも、HSP2.61に近い記述が可能になるだけで、一部の命令や動作は
+					完全な互換にはならないので、ご注意下さい。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="form_decode">form_decode.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>form_decode.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">form_decode.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					cgiで送信されたURLエンコードを元の文字列に戻すためのform_decode命令が追加されます。
+					HSPCLを使用してcgiを作成する時に便利なモジュールです。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_getenv">mod_getenv.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_getenv.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_getenv.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					環境変数の値を変数に取得するためのgetenv命令が追加されます。
+					cgiなどで実行時の環境変数を参照したい時に利用することができます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_img">mod_img.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_img.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_img.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					画像を読み込むためのimgload命令が追加されます。
+					BMP,JPEG,GIF,ICO,PNGフォーマットを読み込むことが可能です。
+					(ただし、packfileからの読み込みはサポートしていないので注意してください)
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="hspmath">hspmath.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>hspmath.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">hspmath.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					高度な数学計算を行なうための定数やマクロが定義されています。
+					円周率πなどの定数や、ラジアン・度の相互変換などの関数が追加されます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_fontdlg">mod_fontdlg.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_fontdlg.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_fontdlg.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					標準でサポートされていない、フォント選択ダイアログを表示するためのモジュールです。
+					手軽にフォント選択のコモンダイアログを呼び出すことができます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプトを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_aht">mod_aht.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_aht.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_aht.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					スクリプトのAHT記述の解析及びサポートを行なうためのモジュールです。
+					Peasエディタや、かんたん入力などの機能を実装するために使用しています。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプトを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_joystick">mod_joystick.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_joystick.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_joystick.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:MIA</th>
+				<th width="20%"><a href="http://taillove.jp/mia/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					Windowsに接続されたジョイスティックの状態を取得するためのモジュールです。
+					アナログ状態の検出が可能な、joyGetPosEx及びstick命令互換の値を取得可能な、jstick命令が追加されます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_menu">mod_menu.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_menu.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_menu.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:HSPWiKi</th>
+				<th width="20%"><a href="http://quasiquote.org/hspwiki/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					メニューバーを作成し、選択などの動作をサポートするためのモジュールです。
+					Windowsがサポートするメニューバーの基本的な機能を利用することができます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_picfont">mod_picfont.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_picfont.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_picfont.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					0～9、A～Zなどの基本的な文字フォントを画像で持ち、それを表示するためのモジュールです。
+					自作の文字フォントを利用する際に使用することができます。
+					また、既存のフォントを画像に変換するサンプル(mkfont.hsp)も付属しています。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_rss">mod_rss.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_rss.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_rss.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					XMLパーサー(MSXML)を使用してRSSを読み込むためのモジュールです。
+					ネットワークURLを直接指定してRSSを取得することができます。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及び命令ヘルプを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="mod_stbar">mod_stbar.as</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>mod_stbar.asの紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">mod_stbar.as</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					ステータスバーを作成し設定するためのモジュールです。
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプトを参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
+		<h3 id="winapi">Win32API定義</h3>
+		<table summary="拡張モジュールの紹介です。" class="pluginlist">
+			<caption>Win32API定義の紹介</caption>
+			<tr>
+				<th width="20%">拡張モジュール</th>
+				<th width="30%">Win32API定義</th>
+				<th width="5%">Ver3.2</th>
+				<th width="25%">作者:sakura/おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+					Win32APIの呼び出し定義ファイルです。
+					このファイルを#include命令により取り込むことで、システム定義の関数を呼び出すことができるようになります。
+					<ul>
+					<li>advapi32.as	advapi32.dll定義
+					<li>comctl32.as	comctl32.dll定義
+					<li>comdlg32.as	comdlg32.dll定義
+					<li>gdi32.as	gdi32.dll定義
+					<li>kernel32.as	kernel32.dll定義
+					<li>shell32.as	shell32.dll定義
+					<li>user32.as	user32.dll定義
+					<li>winmm.as	winmm.dll定義
+					</ul>
+					</p>
+					<p>
+					詳しくは、モジュールのソーススクリプト及びWin32APIヘルプを参照してください。
 					</p>
 				</td>
 			</tr>
