ドキュメントの更新 llmod3を修正

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -25,7 +25,7 @@
 			<li><a href="#PACKAGE">パッケージ構成</a></li>
 			<li><a href="#INSTALL">インストール</a></li>
 			<li><a href="#DEMO">デモンストレーション</a></li>
-			<li><a href="#CHANGE30">HSP3.0からの変更点</a></li>
+			<li><a href="#CHANGE31">HSP3.1からの変更点</a></li>
 			<li><a href="#CHANGE2">HSP2からの変更点</a></li>
 			<li><a href="#EDITOR">スクリプトエディタ</a></li>
 			<li><a href="#BROWSER">HSPTVブラウザ</a></li>
@@ -34,7 +34,7 @@
 			<li><a href="#USERCOM">HSPユーザーコミュニティ</a></li>
 			<li><a href="#LICENCE">HSPによって作られたソフトウェアのライセンスについて</a></li>
 			<li><a href="#COPYRIGHT">著作権、ライセンスについて</a></li>
-			<li><a href="#LANG_LICENCE">言語仕様のライセンスについて</a></li>
+			<li><a href="#LANG_SPEC">言語仕様の管理について</a></li>
 			<li><a href="#EDUCATION">教育用途の使用について</a></li>
 			<li><a href="#MESSAGE">作者より</a></li>
 			<li><a href="#THANKS">謝辞</a></li>
@@ -42,8 +42,8 @@
 
 		<h2 id="ABOUT_HSP">HSPとは?</h2>
 		<p>
-			<abbr title="Hot Soup Processor">HSP</abbr>は、お手軽に使うことのできるスクリプト言語システムです。
-			テキストによるスクリプトを書くだけで、誰にでも簡単にウインドゥズ上で動作する、
+			<abbr title="Hot Soup Processor">HSP</abbr>は、誰でも手軽に使うことのできるスクリプト言語システムです。
+			テキストによるスクリプトを書くだけで、簡単にWindows上で動作する、
 			画像を使ったゲームプログラム、スクリーンセーバー、ツールや実用ソフトなどのアプリケーションを
 			構築することができます。
 		</p>
@@ -75,7 +75,7 @@
 		<h2 id="DOUSA_ENV">動作環境</h2>
 		<ul>
 			<li>Microsoft Windows 98 / Me</li>
-			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista</li>
+			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7</li>
 		</ul>
 		<p>
 			HSP3.2は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
@@ -114,7 +114,7 @@
 		</p>
 		<p>
 			Windows 2000やXP等では、HSP3.2のインストールフォルダに書き込み権限が必要になります。
-			インストーラーのデフォルトディレクトリ(Program Files/HSP31)にインストールを行なった場合なども、
+			インストーラーのデフォルトディレクトリ(/HSP32)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
 		<p>
@@ -141,11 +141,11 @@
 			また、スクリプトエディタに指定したサンプルスクリプトを読み込ませることも可能です。
 		</p>
 
-		<h2 id="CHANGE30">HSP3.0からの変更点</h2>
+		<h2 id="CHANGE31">HSP3.1からの変更点</h2>
 		<p>
 			HSP3.2では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.0で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.2で動作させることができます。
-			（モジュール機能で使用されている命令に一部変更があります。詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。）
+			HSP3.1で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.2で動作させることができます。
+			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 		<p>
 			HSP3.2フルセットでは、HSP3.1から主に以下の要素が追加されています。
@@ -154,132 +154,59 @@
 			<dt>本体機能の拡充</dt>
 			<dd>
 				<p>
-					エラー表示の改善や、プリプロセッサ出力ファイル(hsptmp.i)を標準で生成しないなど、
-					HSP3.0から細かい使い勝手、不具合などに手を入れ修正しています。
-					また、ラベル型変数の追加や、中間コード(オブジェクトファイル)のサイズ最適化
-					などの機能も追加されています。
+					HSP3.1の利便性をさらに高めるため、多くの機能追加と不具合の修正を行なっています。
+					すべてのツール、ドキュメント、サンプルを見直すことで、より細かい要求に応えるものとなっています。
+					また、エラー表示の改善や、実行速度の向上も行なわれています。
 				</p>
 			</dd>
 			<dt>手軽に利用できる新機能</dt>
 			<dd>
 				<p>
-					新しく追加されたプラグイン・モジュールにより、さらに高度なソフトを作成する
-					ことができるようになります。以下は、新規に追加された機能の抜粋です。
-					これ以外にも、多くの改良が行なわれています。
+					HSP3.2では、標準命令を大幅に拡充しています。
+					いままで難しかった処理や、手間のかかる記述が効率化され、幅広い場面での利便性が向上します。
+					新機能は、グラフィック、文字列、配置オブジェクト、ラベル変数、プリプロセッサなどすべての項目に渡って拡充されています。
+					また、付属ツールの更新や新規ツール追加により、ソフトウェア製作をより強力にサポートします。
 				</p>
 			</dd>
-			<dt>HSPDAプラグイン</dt>
+			<dt>充実したサンプルスクリプト</dt>
 			<dd>
 				<p>
-					実行中の変数データの一部または全部をファイルとして入出力できる、
-					vsave、vload命令が追加されています。
-					いままでスクリプトが終了時にクリアされていたデータを、手軽に
-					保存しておくことができるようになります。
-				</p>
-			</dd>
-			<dt>HSPCVプラグイン</dt>
-			<dd>
-				<p>
-					OpenCV技術を利用した画像処理を可能にする新しいプラグインです。
-					JPEG、JPEG 2000、PNG、TIFF等の画像ファイル読み込みと保存をサポート
-					するほか、高度な画像処理(リサイズ、スムージング、画像認識、色抽出や
-					変換など)を手軽に呼び出すことができます。
-				</p>
-				<p>
-					他にも、ムービー(avi)ファイル
-					操作やUSBカメラ等のキャプチャデバイス読み込みなど映像に関する多くの
-					機能を提供しています。 
-				</p>
-			</dd>
-			<dt>HGIMG3プラグイン</dt>
-			<dd>
-				<p>
-					ビューポートの設定、半球ライティングのサポート、エフェクトモデルの生成、
-					イベント機能の拡充などにより、さらに高度なビジュアルを生み出すことが
-					できます。さらに、サウンド機能としてDirect Soundによる波形の多重再生、
-					パンボリュームコントロール、 OggVorbis形式によるストリーム音楽再生に
-					対応しています。
-				</p>
-				<p>
-					また、サウンド機能だけを独立させたHSPOGGプラグインも追加されています。
-				</p>
-			</dd>
-			<dt>Easy3Dプラグイン</dt>
-			<dd>
-				<p>
-					3D表示の選択肢として、おちゃっこ氏製作によるEasy3Dプラグインが同梱され
-					ており、すぐに利用可能です。Easy3Dプラグインは、3Dゲームを作成する
-					際に必要となる高度な機能を内蔵しており、モーションの作成やマップの
-					表示なども幅広くサポートされています。 
-				</p>
-			</dd>
-			<dt>HSPDXプラグイン</dt>
-			<dd>
-				<p>
-					HSP2の時代から、2D表示に多く利用されているHSPDXプラグインの後継として、
-					Sinagawa氏製作による最新のHSPDXFIXが同梱されています。
-					オリジナルのものと比べて、画面モードの指定や、スプライトの拡大縮小、
-					回転や半透明表示といった要素がパワーアップされています。
-				</p>
-			</dd>
-			<dt>d3module</dt>
-			<dd>
-				<p>
-					標準命令だけで簡易的な3D描画を行なうモジュールとして、S.Programs氏
-					製作によるd3moduleが同梱されています。
-					手軽に3Dの計算や描画を行なうための環境として利用することができます。
-				</p>
-			</dd>
-			<dt>HSPLetを標準でサポート</dt>
-			<dd>
-				<p>
-					山田 雄己(Yuki)氏製作によるHSPLetを同梱しています。
-					HSPLetは、HSPの実行をJavaランタイム上で行なうためのシステムで、
-					これによりWebブラウザでの実行及び、Windows以外のシステムで
-					HSP3のスクリプトを動作させることが可能になります。
-					（いくつかの制約と互換性についての注意点があります）
+					新機能を使ったサンプルはもちろん、各種アプリケーションで必要なサンプルやモジュール、
+					さらに色々なジャンルのゲームに使用できる実践的なサンプルを数多く追加しています。
+					その数は、２５０種類以上に及びます。きっとあなたの目的に合ったサンプルが見つかるはずです。
 				</p>
 			</dd>
 			<dt>かんたん入力機能</dt>
 			<dd>
 				<p>
-					「かんたん入力」は、利用したい機能の内容を選ぶだけで、
-					パラメーターやオプションの選択を別ダイアログのユーザーインターフェースによって
-					行なうことのできる初心者向けのアシスト機能です。
-					スクリプトエディタから右クリックを押して、「かんたん入力」のメニューを選択することで
-					手軽に利用することができます。
-				</p>
-			</dd>
-			<dt>Peasエディタによるスクリプト自動生成</dt>
-			<dd>
-				<p>
-					新しく付属するPeasエディタは、テンプレート(ひな型)のパーツと、パラメーターやオプションを
-					決めるだけで、自動的にスクリプトを生成する簡易プログラミング環境を提供します。
-					ユーザーは、今まで通りにエディタでスクリプトを書くことはもちろん、
-					マウス操作だけでプログラムを作成することが可能になります。
+					HSP3.1の「かんたん入力」を大幅にパワーアップ。
+					機能のカテゴリから、逆引きで命令を検索することができ、さらにパラメーターの
+					入力機能や、ヘルプ参照機能も備えています。
 				</p>
 			</dd>
 			<dt>新しいヘルプマネージャー</dt>
 			<dd>
 				<p>
-					S.Programs氏製作によるHSP HELP Browser IIを標準で内蔵しています。
-					ヘルプ項目をhtml形式で表示することにより、閲覧しやすくなるほか、キーワードの
-					マークアップなど使い勝手が大幅に向上しています。
-				</p>
-				<p>
-					また、HSPLetを含むプラットフォームごとの互換性表示など、
-					それぞれの命令についてより多くの情報を確認することができます。
+					S.Programs氏製作によるHDL(HSP Document Library)を標準で内蔵しています。
+					ヘルプだけでなく、サンプルやドキュメントも含めて閲覧、検索をすることができます。
+					非常に多機能なブラウザにより、ヘルプの使い勝手も向上しています。
 				</p>
 			</dd>
-			<dt>HSPTVブラウザのリニューアル</dt>
+			<dt>強力な3Dプラグイン</dt>
 			<dd>
 				<p>
-					最新のHSPTVブラウザでは、サーバーとのデータ同期によるランキング保存や、
-					各種データの保持を行なうことができます。
+					HSP3.2には、2つの強力な3Dプラグインが同梱されています。
+					新たに地形メッシュやコリジョン自動移動、カメラ自動制御などに対応したHGIMG3プラグイン。
+					そして、シェーダー対応により高機能、高速化されたEasy3Dプラグイン。
+					どちらも、最新の技術をHSPから手軽に呼び出し、3Dゲームや3Dアプリケーションを
+					構築することができます。
 				</p>
+			</dd>
+			<dt>llmod3</dt>
+			<dd>
 				<p>
-					ユーザーが、HSPTVブラウザ上での動作を確認することのできる、テスト動作機能も追加され、
-					HSPTVブラウザ上コンテンツがより楽しめるものへ進化します。
+					HSP2.61までの資産を引き継ぐ形で、従来のllmodと呼ばれるモジュールを利用可能にしています。
+					モジュールを追加するだけで、システムやオブジェクト関連の多彩な機能をサポートします。
 				</p>
 			</dd>
 		</dl>
@@ -513,12 +440,15 @@
 			<li>HSPプログラミングマニュアル等HSPの各種技術資料(doclib/hspsdkフォルダ内)</li>
 		</ul>
 		<p>
-			HSPデモンストレーション(hsp3demo.exe)及びそのデータは、
-			HSPフルセットに限って配布を許可されているものです。
-			単体での複製、改編、再配布は許可していませんので、ご注意ください。
+			<em>以下に示されたファイルは、HSPフルセットに限って配布を許可されているものです。
+			単体での複製、改編、再配布は許可していませんので、ご注意ください。</em>
 		</p>
+		<ul>
+			<li>HSPデモンストレーションのデータファイル(sample/demoフォルダ内のデータ)</li>
+			<li>Easy3Dのサンプルデータファイル(sample/Easy3Dフォルダ以下のデータ)</li>
+		</ul>
 
-		<h2 id="LANG_LICENCE">言語仕様のライセンスについて</h2>
+		<h2 id="LANG_SPEC">言語仕様の管理について</h2>
 		<p>
 			HSP2、HSP3を含むHot Soup Processor(ホットスーププロセッサー)の言語仕様は、
 			Onion Software/onitamaが保守管理を行なっています。
@@ -620,16 +550,25 @@
 			HSP3及びHSPTVデザインワークは、Senchaさん、ゆめゆめゆうかさんに作成して頂きました。
 		</p>
 		<p>
-			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさんのご協力により作成されています。
+			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさん、Shark++さんのご協力により作成されています。
 		</p>
 		<p>
-			また、エディタエンジンとしてHyperPageProjectさんのFootyライブラリを使用しています。
+			HSPスクリプトエディタ(hsed3.exe)の、エディタエンジンとしてHyperPageProjectさんのFootyライブラリを使用しています。
 		</p>
 		<p>
 			COMオブジェクトの呼び出し及びイベント処理は、ちょくとさんに協力頂きソースの作成を行なっています。
 		</p>
 		<p>
-			HSP HELP BrowserはS.Programsさんが製作されたものを同梱させていただきました。
+			HSP Document LibraryはS.Programsさんが製作されたものを同梱させていただきました。
+		</p>
+		<p>
+			HSPLetは、山田 雄己(Yuki)さんが製作されたものを同梱させていただきました。
+		</p>
+		<p>
+			Easy3Dプラグインは、おちゃっこさんが製作されたものを同梱させていただきました。
+		</p>
+		<p>
+			llmod3モジュールは、tomさん、芝やんさんが開発したものを使用させて頂きました。
 		</p>
 		<p>
 			switch関連の標準マクロは、USKさん、NGND001さんが作成したものを使用させていただきました。
@@ -638,10 +577,7 @@
 			標準マクロ、_continue および _breakは、testさんが作成したものを使用させていただきました。
 		</p>
 		<p>
-			命令ヘルプの作成にあたり、yoshisさん、nakaさんにご協力いただきました。
-		</p>
-		<p>
-			また、初心者マニュアルのhtml化はJETさんにご協力いただきました。
+			命令ヘルプ、ドキュメントの作成にあたり、yoshisさん、nakaさん、JETさん、ellerさんにご協力いただきました。
 		</p>
 		<p>
 			WIN32API関連の定義ファイル(advapi32.as,comctl32.as,comdlg32.as,gdi32.as,kernel32.as,shell32.as,
@@ -655,14 +591,17 @@
 			tomさんにloadlib/llmod関連やWIN32APIについて参考になる助言を頂きました。
 		</p>
 		<p>
-			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
-			ご意見をお寄せいただいた多くの方々に感謝致します。
-		</p>
-		<p>
 			数学関連マクロ(hspmath.as)は、HSPWiKiにて公開されているものを同梱させて頂きました。
 		</p>
 		<p>
 			HSP3ユーティリティマクロ(hsp3util.as)は、HSPWiKi及び、ぷまさんが作成したものを同梱させて頂きました。
+		</p>
+		<p>
+			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさんに感謝致します。
+		</p>
+		<p>
+			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
+			ご意見をお寄せいただいた多くの方々に感謝致します。
 		</p>
 		<dl>
 			<dt>ちょくと さん</dt>
@@ -699,6 +638,30 @@
 			<dd>
 				<p>
 		<a href="http://www.hpp.be/">http://www.hpp.be/</a>
+				</p>
+			</dd>
+			<dt>おちゃっこさん</dt>
+			<dd>
+				<p>
+		<a href="http://www5d.biglobe.ne.jp/~ochikko/">http://www5d.biglobe.ne.jp/~ochikko/</a>
+				</p>
+			</dd>
+			<dt>山田 雄己(Yuki)さん</dt>
+			<dd>
+				<p>
+		<a href="http://www.group-finity.com/">http://www.group-finity.com/</a>
+				</p>
+			</dd>
+			<dt>fujidigさん</dt>
+			<dd>
+				<p>
+		<a href="http://www.fujidig.com/">http://www.fujidig.com/</a>
+				</p>
+			</dd>
+			<dt>Shark++さん</dt>
+			<dd>
+				<p>
+		<a href="http://www.sharkpp.net/">http://www.sharkpp.net/</a>
 				</p>
 			</dd>
 		</dl>
