--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -42,9 +42,10 @@
 					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール</a></li>
 					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
 					<li><a href="#DEBUG_WINDOW">デバッグウィンドウ</a></li>
-					<li><a href="#EX_MACRO">HSP拡張マクロ</a></li>
+					<li><a href="#EX_MACRO">HSP拡張マクロ<span class="new">（New!）</span></a></li>
 					<li><a href="#COLORING_AND_TAB">スクリプトの色分けとタブ</a></li>
 					<li><a href="#HSPLET">HSPLetの利用について</a></li>
+					<li><a href="#HSPMT">マルチスレッド対応版の利用について<span class="new">（New!）</span></a></li>
 					<li><a href="#EASY_INPUT">かんたん入力<span class="new">（New!）</span></a></li>
 					<li><a href="#PEAS_EDITOR">Peasエディタ</a></li>
 				</ol>
@@ -790,6 +791,8 @@
 			ただし、どんなDLLでも可能なわけではありません。仕様にもとづいて作られた
 			「HSP拡張ランタイムモジュール(HRTファイル)」がサポートするDLLのみ、
 			実現が可能です。
+			拡張ランタイムは、プリプロセッサ命令「#runtime」によって、スクリプト中で指定します。
+			指定されたランタイムは、スクリプト実行時及び、実行ファイル作成時に反映されます。
 		</p>
 		<p> 
 			「HSP拡張ランタイム」により、HSPで作られたプログラムを
@@ -824,6 +827,13 @@
 				<p>
 					HGIMG3の機能を内包したランタイムです。
 					HGIMG3ランタイムで作成したアプリケーションの実行ファイルを作成する際に使用します。
+				</p>
+			</dd>
+			<dt>hsp3mt.hrt</dt>
+			<dd>
+				<p>
+					マルチスレッド版HSP3の機能を内包したランタイムです。
+					マルチスレッド版で作成したアプリケーションの実行ファイルを作成する際に使用します。
 				</p>
 			</dd>
 		</dl>
@@ -909,6 +919,17 @@
 			commonフォルダ内の「hspdef.as」ファイルが設定を行なっています。
 			スクリプトのコンパイル時には、自動的に「hspdef.as」が読み込まれることになります。
 		</p>
+		<p>
+			HSP3.2から、スクリプトエディタのHSPメニュー「HSP拡張マクロを使用する」
+			項目が廃止され、常にHSP拡張マクロを使用する形に変更されています。
+			このスイッチは、もともとHSP2互換のスクリプトとして動作させるために用意
+			されたものですが、誤って変更してしまった場合に、HSP3用のスクリプトが
+			動作しなくなるなど、問題が指摘されていました。
+			HSP3.0がリリースされてから4年が経過しており、HSP2互換のモードで実行する
+			必要性が薄くなってきたこともあり、このスイッチはメニューから削除しました。
+			ただし、HSP2互換マクロは従来通り用意されているので、スクリプトの先頭に
+			「#include "hsp261cmp.as"」を記述すれば、HSP2互換として動作します。
+		</p>
 
 		<h3 id="COLORING_AND_TAB">スクリプトの色分けとタブ</h3>
 		<p>
@@ -936,7 +957,7 @@
 
 		<h3 id="HSPLET">HSPLetの利用について</h3>
 		<p>
-			HSP3.1では、山田 雄己(Yuki)さん製作によるHSPLetを標準で同梱しています。
+			HSP3.2では、山田 雄己(Yuki)さん製作によるHSPLetを標準で同梱しています。
 			HSPLetは、HSPの実行をJavaランタイム上で行なうためのシステムで、
 			これによりWebブラウザでの実行及び、Windows以外のシステムで動作させることが
 			可能になります。(いくつかの制約と互換性についての注意点があります)
@@ -964,6 +985,30 @@
 				</p>
 			</dd>
 		</dl>
+
+
+		<h3 id="HSPMT">マルチスレッド対応版の利用について</h3>
+		<p>
+			HSP3.2では、マルチスレッド対応版ランタイムが同梱されています。
+			これは、マルチスレッド環境に対応し効率良く動作することが期待されるほか、
+			PGO (Profile-Guided Optimization)による最適化を行なっており、
+			より高いパフォーマンスを期待できます。
+			(ただし、従来よりもランタイムのファイルサイズが約80KB増加しています。)
+		</p>
+		<p>
+			マルチスレッド版のランタイムは、スクリプトの先頭に#runtime命令を
+			以下のように記述することで使用できます。
+		</p>
+		<pre>
+			#runtime "hsp3mt" ; マルチスレッドランタイムを使用する
+		</pre>
+		<p>
+			マルチスレッドランタイムは、通常のHSP3と同様に使うことができます。
+			ただし、別なランタイム(コンソール版HSPやHGIMG3など)と同時に指定することはできません。
+			(HGIMG3は、すでにマルチスレッドに対応しているため特に指定する意味はありません。)
+			ランタイムの最適化については、今後も作業を行なっていく予定です。
+		</p>
+
 
 		<h3 id="EASY_INPUT">かんたん入力</h3>
 		<p>
@@ -999,7 +1044,7 @@
 
 		<h3 id="PEAS_EDITOR">Peasエディタ</h3>
 		<p>
-			HSP3.1では、スクリプトエディタに替わるもう1つのスクリプト作成環境<em>Peasエディタ</em>が
+			HSP3.1から、スクリプトエディタに替わるもう1つのスクリプト作成環境<em>Peasエディタ</em>が
 			同梱されています。これは、メニューから「Peasエディタ」を選択するか、または直接
 			「ahtman.exe」から起動させて使用します。
 		</p>
