--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -44,6 +44,9 @@
 					<li><a href="doclib/hspdx.txt">HSPDX.DLL マニュアル（hspdx.txt）</a></li>
 					<li><a href="doclib/hspcv.txt">HSPCV.DLL マニュアル（hspcv.txt）</a></li>
 					<li><a href="doclib/hgimg3.txt">HGIMG3 マニュアル（hgimg3.txt）</a></li>
+					<ul>
+						<li><a href="doclib/elm2d_edit.txt">HGIMG3 2D Elements Editor（HGIMG3ユーザー向け）（elm2d_edit.txt）</a></li>
+					</ul>
 					<li><a href="doclib/hspogg.txt">HSPOGG.DLL マニュアル（hspogg.txt）</a></li>
 					<li><a href="doclib/hspinet.txt">HSPINET.DLL マニュアル（hspinet.txt）</a></li>
 					<li><a href="doclib/hspsock.txt">HSPSOCK.DLL マニュアル（hspsock.txt）</a></li>
